--- a/EasyCashIdentityProject.PresentationLayer/Views/CustomerLayout/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/CustomerLayout/Index.cshtml
@@ -12,14 +12,8 @@
         <div class="main_container">
             @await Component.InvokeAsync("_CustomerLayoutSidebarPartial")
             @await Component.InvokeAsync("_CustomerLayoutNavbarPartial")
-            <div class="right_col" role="main">
-                <div class="">
-                    <div class="page-title">
-                        <div class="title_left">
-                            @RenderBody()
-                        </div>
-                    </div>
-                </div>
+            <div class="" role="main">
+                            @RenderBody()>
             </div>
             @await Component.InvokeAsync("_CustomerLayoutFooterPartial")
         </div>
