--- a/EasyCashIdentityProject.PresentationLayer/Views/_ViewImports.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EasyCashIdentityProject.PresentationLayer
 @using EasyCashIdentityProject.PresentationLayer.Models
 @using EasyCashIdentityProject.DtoLayer.Dtos.AppUserDtos
+@using EasyCashIdentityProject.DtoLayer.Dtos.CustomerAccountProcessDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
